--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "5.7",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
