--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
+    - php: 5.5
+    - php: 5.6
     - php: 7.0
     - php: 7.1
 
@@ -33,6 +35,7 @@ install:
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:create --env=test
 #  - php bin/console doctrine:fixtures:load -n --env=test
+
 
 # After a build, send email notification with the build results
 notifications:
